# AlphaCharles

./: .gitignore  LESSONS.md  METRICS.md  README.md  RESULTS.md  RUNPOD.md  pyproject.toml
alphazero/: __init__.py  data_pgn.py  data_puzzles.py  dataset.py  encoding.py  eval.py  mcts.py  metrics.py  model.py  replay.py  selfplay.py  training.py
artifacts/: .gitignore
artifacts/checkpoints_manifest/: manifest.txt
artifacts/eval_rl_v3/: rl_v3_sf3.txt  rl_v3_sf5.txt
artifacts/eval_rl_v3_1600/: rl_v3_sf3.txt  rl_v3_sf5.txt  rl_v3_sf7.txt
artifacts/human_matches/: human_vs_ac_20260422_114039_flagged.pgn  human_vs_ac_20260422_115559.pgn  human_vs_ac_20260422_120423.pgn
artifacts/rl_pgns_sample/: w1_g00005_1776789099.pgn  w1_g00009_1776789353.pgn  w1_g00013_1776789804.pgn  w1_g00014_1776789872.pgn  w1_g00016_1776789916.pgn  w1_g00017_1776789962.pgn  w1_g00018_1776790046.pgn  w1_g00019_1776790200.pgn  w1_g00020_1776790278.pgn  w1_g00021_1776790321.pgn  w2_g00006_1776789224.pgn  w2_g00009_1776789516.pgn  w2_g00015_1776790162.pgn  w3_g00007_1776789223.pgn  w3_g00009_1776789320.pgn  (+39 more)
configs/: rl_parallel.yaml  rl_selfplay.yaml  rl_v2_test.yaml  rl_v3.yaml  sl_puzzles.yaml  sl_soft.yaml  sl_warmstart.yaml
scripts/: download_data.sh  eval_vs_stockfish.py  games_viewer.py  play_human.py  play_server.py  plot_losses.py  pod_pipeline.sh  pod_setup.sh  pod_tmux.sh  rl_launch.sh  rl_parallel.py  rl_v2_launch.sh  rl_v3_launch.sh  train_rl.py  train_sl.py
tests/: test_encoding.py  test_eval.py  test_mcts.py  test_metrics.py  test_model.py  test_selfplay.py  test_training.py
(+25647 files in other folders)
